update auth handler
